--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,11 +1,11 @@
 <nav>
   <div class="site-title">
-    <a href="/"><h1>Blog Nimja</h1></a>
-    <p>A New Ninja Site</p>
+    <a href="/"><h1>Puppeteer Scraping</h1></a>
+    <p>A New Puppeteer Scraping Site</p>
   </div>
   <ul>
-    <li><a href="/">Blogs</a></li>
+    <li><a href="/">Scrapings</a></li>
     <li><a href="/about">About</a></li>
-    <li><a href="/blogs/create">New Blog</a></li>
+    <li><a href="/blogs/create">New Scraping</a></li>
   </ul>
 </nav>
