--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,10 +5,13 @@
     <%- include("./partials/nav.ejs") %>
 
     <div class="blogs content">
-      <h2>All Blogs</h2>
+      <h2>All Scrapings</h2>
       <% if (blogs.length > 0){ %> <% blogs.forEach(blog=>{ %>
-      <h3 class="title"><%= blog.title%></h3>
-      <p class="snippet"><%= blog.snippet%></p>
+      <a class="single" href="/blogs/<%= blog.id %>">
+        <h3 class="title"><%= blog.title%></h3>
+        <p class="snippet"><%= blog.snippet%></p>
+        <p class="snippet"><%= blog.id%></p>
+      </a>
       <% })%> <%}%>
     </div>
     <%- include("./partials/footer.ejs") %>
