--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -1,4 +1,32 @@
-<p>test</p>
-<p><%=blog.title%></p>
-<p><%=blog.snippet%></p>
-<p><%=blog.body%></p>
+<!DOCTYPE html>
+<html lang="ja">
+  <%- include("./partials/head.ejs") %>
+  <body>
+    <%- include("./partials/nav.ejs") %>
+
+    <div class="details content">
+      <h2><%= blog.title%></h2>
+      <div class="content">
+        <p><%= blog.body%></p>
+      </div>
+      <a class="delete" data-doc="<%= blog.id%>">delete</a>
+    </div>
+    <%- include("./partials/footer.ejs") %>
+    <script>
+      const trashcan = document.querySelector("a.delete");
+      trashcan.addEventListener("click", (e) => {
+        const endpoint = `/blogs/${trashcan.dataset.doc}`;
+        fetch(endpoint, {
+          method: "DELETE",
+        })
+          .then((response) => response.json())
+          .then(
+            (data) => (
+              (window.location.href = data.redirect), console.log(data)
+            )
+          )
+          .catch((error) => console.log(error));
+      });
+    </script>
+  </body>
+</html>
