--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -15,13 +15,38 @@
 
     <script>
       const form = document.querySelector(".login-form");
-      form.addEventListener("submit", (e) => {
+      const emailError = document.querySelector(".email.error");
+      const passwordError = document.querySelector(".password.error");
+
+      form.addEventListener("submit", async (e) => {
         e.preventDefault();
+        //reset error message
+        emailError.textContent = "";
+        passwordError.textContent = "";
         //get the value
         const email = form.email.value;
         const password = form.password.value;
-        //bacause input names are email and password
-        console.log(email, password);
+        //bacause input names are  linked to email and password
+        try {
+          const res = await fetch("/signup", {
+            method: "POST",
+            body: JSON.stringify({ email, password }),
+            headers: { "Content-Type": "application/json" },
+          });
+          res.json().then((result) => {
+            if (result) {
+              console.log(result);
+              emailError.textContent = result.email;
+              passwordError.textContent = result.password;
+            }
+            if (result.user) {
+              location.assign("/");
+            }
+          });
+          //promiseResult can be got with method chain
+        } catch (error) {
+          console.log(error);
+        }
       });
     </script>
 
