--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -7,5 +7,11 @@
     <li><a href="/">Scrapings</a></li>
     <li><a href="/about">About</a></li>
     <li><a href="/blogs/create">New Scraping</a></li>
+    <%if(user){%>
+    <li><a href="/logout">Log out</a></li>
+    <%}else{%>
+    <li><a href="/signup">Log in</a></li>
+    <li><a href="/login">Log in</a></li>
+    <%}%>
   </ul>
 </nav>
