--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,16 +1,16 @@
 <nav>
   <div class="site-title">
-    <a href="/"><h1>Puppeteer Scraping</h1></a>
-    <p>A New Puppeteer Scraping Site</p>
+    <a href="/"><h1>Puppeteer Scraping API</h1></a>
+    <p>Find Your Favorite Site You Scrape With Puppeteer</p>
   </div>
   <ul>
-    <li><a href="/">Scrapings</a></li>
+    <li><a href="/">Lists</a></li>
     <li><a href="/about">About</a></li>
-    <li><a href="/blogs/create">New Scraping</a></li>
+    <li><a href="/lists/create">Add</a></li>
     <%if(user){%>
     <li><a href="/logout">Log out</a></li>
     <%}else{%>
-    <li><a href="/signup">Log in</a></li>
+    <li><a href="/signup">Sign Up</a></li>
     <li><a href="/login">Log in</a></li>
     <%}%>
   </ul>
