--- a/views/create.ejs
+++ b/views/create.ejs
@@ -5,13 +5,22 @@
     <%- include("./partials/nav.ejs") %>
 
     <div class="create-blog content">
-      <form action="/blogs" method="POST">
-        <label for="title">Blog title</label>
-        <input type="text" id="title" name="title" required />
-        <label for="snippet">Blog snippet:</label>
-        <input type="text" id="snippet" name="snippet" required />
-        <label for="body">Blog body:</label>
-        <textarea id="body" name="body" required></textarea>
+      <form action="/lists" method="POST">
+        <label for="productName">Product Name:</label>
+        <input type="text" id="productName" name="productName" required />
+        <label for="shopNamePath">Shop Name Path:</label>
+        <input type="text" id="shopNamePath" name="shopNamePath" required />
+        <label for="productPricePath">Product Price Path:</label>
+        <input
+          type="text"
+          id="productPricePath"
+          name="productPricePath"
+          required
+        />
+        <label for="productPricePath">Url:</label>
+        <input type="text" id="url" name="url" required />
+        <label for="remark">Remark:</label>
+        <textarea id="remark" name="remark" required></textarea>
         <button>Submit</button>
       </form>
     </div>
