--- a/views/create.ejs
+++ b/views/create.ejs
@@ -6,6 +6,7 @@
 
     <div class="create-blog content">
       <form action="/lists" method="POST">
+        <!-- <form action="/lists" method="POST" enctype="multipart/form-data"> -->
         <label for="productName">Product Name:</label>
         <input type="text" id="productName" name="productName" required />
         <label for="shopNamePath">Shop Name Path:</label>
@@ -21,6 +22,8 @@
         <input type="text" id="url" name="url" required />
         <label for="remark">Remark:</label>
         <textarea id="remark" name="remark" required></textarea>
+        <!-- <label for="thumbnail">Thumbnail:</label>
+        <input type="file" id="thumbnail" name="thumbnail" required /> -->
         <button>Submit</button>
       </form>
     </div>
