--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -11,6 +11,7 @@
         <p><%= list.product_price_path%></p>
         <p><%= list.url%></p>
         <p><%= list.remark%></p>
+        <img src="<%= list.thumbnail%>" alt="" width="300" />
       </div>
       <a class="delete" data-doc="<%= list.id%>">delete</a>
     </div>
