ラベルの名前を変更

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,7 +4,7 @@
   <body>
     <form class="login-form">
       <h2>Log in</h2>
-      <label for="email" class="login-label">Email</label>
+      <label for="email" class="login-label">Login ID</label>
       <input type="text" name="email" required class="login-input" />
       <div class="email error"></div>
       <label for="password" class="login-label">Password</label>
