--- a/public/style.css
+++ b/public/style.css
@@ -1,9 +1,14 @@
-@import url("https://fonts.googleapis.com/css2?family=Noto+Serif:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Poppins:wght@900&display=swap"); */
+/* @import url("https://fonts.googleapis.com/css2?family=Noto+Serif:wght@400;700&display=swap"); */
+
 body {
   max-width: 1200px;
   margin: 20px auto;
   padding: 0 20px;
-  font-family: "Noto Serif", serif;
+  font-family: Poppins, sans-serif;
+  /* font-family: "Montserrat", sans-serif; */
+  /* font-family: "Noto Serif", serif; */
 }
 p,
 h1,
@@ -15,6 +20,13 @@ ul {
   padding: 0;
   text-decoration: none;
   color: #222;
+  /* 英字を改行させる */
+  overflow-wrap: break-word;
+  word-break: break-word;
+  word-break: break-all;
+}
+b {
+  color: #777;
 }
 nav {
   display: flex;
@@ -51,7 +63,7 @@ h2 {
 }
 h3 {
   text-transform: capitalize;
-  padding: 10px 0;
+  padding: 0 0 10px 0;
 }
 .content {
   margin-left: 20px;
@@ -61,12 +73,17 @@ h3 {
   display: flex;
   justify-content: space-between;
   margin: 30px 0;
-  padding: 0 30px;
+  padding: 15px 30px;
   border-left: 7px solid crimson;
   background-color: #f1f1f1;
 }
 .blogs a:hover h3 {
   color: crimson;
+}
+.thumbnail {
+  width: 130px;
+  height: 130px;
+  margin: auto 0;
 }
 .image {
   width: 130px;
