--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,7 +29,7 @@
           <% }%> <% if (!list.thumbnail){ %>
           <img
             class="image"
-            src="https://placehold.jp/5dab9f/ffffff/150x150.png?text=Not Images"
+            src="https://placehold.jp/15/DC143C/ffffff/130x130.png?text=NO+IMAGE"
             alt=""
           />
           <% }%>
