--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,11 +74,12 @@ h3 {
   justify-content: space-between;
   margin: 30px 0;
   padding: 15px 30px;
-  border-left: 7px solid #DC143C;
+  /* Wild Rider Red */
+  border-left: 7px solid #dc143c;
   background-color: #f1f1f1;
 }
 .blogs a:hover h3 {
-  color: #DC143C;
+  color: #dc143c;
 }
 .thumbnail {
   width: 130px;
@@ -125,7 +126,7 @@ textarea {
 }
 .create-blog button {
   margin-top: 20px;
-  background:#DC143C;
+  background: #dc143c;
   color: white;
   padding: 6px;
   border: 0;
