line関数の削除

--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -7,7 +7,7 @@
     <div class="details content">
       <h2><%= list.product_name%></h2>
       <div class="content">
-        <p class="timestamp"><%= formatDateTime(list.time_stamp)%></p>
+        <p class="timestamp"><%= formatDateTime(list.timestamp)%></p>
         <p><%= list.shop_name_path%></p>
         <p><%= list.product_price_path%></p>
         <p><%= list.url%></p>
